--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,9 @@
     -->
     <title>React App</title>
   </head>
-  <body style="background-color: #FEF08A;">
+  <body style="background-color: #FEF08A; margin: 0;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="overlays"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
