--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>React App</title>
   </head>
-  <body style="background-color: #FEF08A; margin: 0;">
+  <body style="background-color: #FEF08A; margin: 0; overflow: scroll; overflow-y: hidden; scrollbar-width: none; -ms-overflow-style: none;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="overlays"></div>
     <div id="root"></div>
