--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Film App</title>
   </head>
   <body style="background-color: #FEF08A; margin: 0; overflow: scroll; overflow-y: hidden; scrollbar-width: none; -ms-overflow-style: none;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
